--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
   <string name="app_name">RxJavaDemo</string>
+  <string name="hint_username">Username</string>
+  <string name="no_gist_status">No gist available</string>
 </resources>
